--- a/Master Chemistry/periodicTable/periodicTable.html
+++ b/Master Chemistry/periodicTable/periodicTable.html
@@ -45,7 +45,7 @@
       </div>
 
       <div class="key">
-        <div class="keyBox" style="background-color: #68D8FF;"></div>
+        <div class="keyBox" style="background-color: #2853ff;"></div>
         <span>Transition Metal<span>
       </div>
 
