--- a/Master Chemistry/index.html
+++ b/Master Chemistry/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Chemistry Teacher Helper</title>
+	<link rel="stylesheet" href="index.css">
 </head>
-<body>
-    hellohello
-</body>
-</html>
+
+<body>  
+	<header id="topHeader">
+		<h1>Master Chemistry</h1>
+	</header>
+  
+	<a href="periodicTable/">
+		<div class="button red">Periodic Table</div>
+	</a>
+  
+	<a href="elementSearcher/">
+		<div class="button orange" >Element Searcher</div>
+	</a>
+  
+	<a href="academicSearcher/">
+		<div class="button yellow" >Academic Support Calendar</div>
+	</a>
+  
+	<a href="randomGroup/">
+		<div class="button green">Random Group Generater</div>
+	</a>
+  
+	<a href="gradeCalc/">
+		<div class="button purple">Grade Calculater</div>
+	</a>
+  
+	<footer class="footer" style = "margin-bottom:0%">
+		<div class="section red">Chemistry</div>
+		<div class="section orange">Teacher</div>
+		<div class="section yellow">Helper</div>
+		<div class="section green">&copy; 2025</div>
+	</footer>
+  </body>
+  </html>
